# brainfuck_interpreter

./: .gitignore  LICENSE  README.md  meson.build
src/: brainfuck.c  dynarray.c  dynarray.h  jit.c  jit.h  meson.build  runtime.c  runtime.h  utils.c  utils.h
src/jit/: compiler.h  compiler_x86_64.c  meson.build  null_arch.c
src/jit/linux/: x86_64.c
tests/: hello_simple.btest  project_euler_1.btest
